--- a/package.json
+++ b/package.json
@@ -7,13 +7,22 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.ts",
+    "build": "tsc",
+    "serve": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "node-telegram-bot-api": "^0.66.0"
   },
   "devDependencies": {
-    "@types/node-telegram-bot-api": "^0.64.11"
+    "@types/express": "^5.0.3",
+    "@types/node": "^24.9.1",
+    "@types/node-telegram-bot-api": "^0.64.11",
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
